fix overflow

--- a/styles.css
+++ b/styles.css
@@ -112,3 +112,7 @@ canvas { width: 100%; height: 100% }
   padding-top: .25rem;
   padding-bottom: .25rem;
 }
+
+.object-properties {
+  overflow: scroll;
+}
